<resources>
    <string name="app_name">MTAA</string>

    <!-- Strings related to login -->
    <string name="prompt_email">p3@a.sk</string><!-- email-->
    <string name="prompt_password">3</string><!-- password-->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="share_room">ShareRooms.sk</string>
    <string name="my_mail">xkanuch@stuba.sk</string>
</resources>
