<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.peter.mtaa.Activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="32dp"
            android:id="@+id/InputPassword"
            android:layout_below="@+id/InputEmail"
            android:layout_alignStart="@+id/InputEmail"
            android:text="@string/prompt_password"
            tools:text="@string/error_invalid_password" />

        <Button
            android:text="@string/action_sign_in_short"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/InputPassword"
            android:layout_alignStart="@+id/InputPassword"
            android:layout_marginTop="21dp"
            android:id="@+id/ButtonSignIn"
            android:layout_alignEnd="@+id/InputPassword" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_marginTop="208dp"
            android:id="@+id/InputEmail"
            android:text="@string/prompt_email"
            tools:text="@string/error_invalid_email"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>
